Fixed page and post footer description on mobile

--- a/css/main.sass
+++ b/css/main.sass
@@ -571,7 +571,7 @@ body
       text-shadow: 0px 0px 15px rgba(0,0,0,1), 0px 0px 5px rgba(0,0,0,0.8)
 
     .blog-description
-      width: 440px
+      max-width: 440px
       margin: 0 auto 40px
       border-radius: 5px
       padding: 0 $rs*2
